--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>malyshkrepysh</title>
-    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+    <meta name="yandex-verification" content="e24852ac5680a5a1" />
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-KNQBCNZ');</script>
+        <!-- End Google Tag Manager -->
+    <meta name="google-site-verification" content="OMbrc_HSyhhUuUWv9Rhvz6-SKmvRvwuSuJUtDfy28Vc" />
+    <meta name="description" content="купить растущий стульчик растущий стул экологически чистые материалы материал изготовления фанера из березы доставка по всей России доставка любой транспортной компанией доставка Почтой России без предоплаты">
+    <meta name="keywords" content="растущий стульчик, малыш крепыш">
+    <title>Растущий стульчик| Растущий стул | malyshkrepysh | малыш крепыш</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.min.css">
+
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KNQBCNZ"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header class="header">
         <div class="logo"><img src="icons/mk.svg" alt="malyshkrepysh"></div>
             <nav class="header__navigate">
@@ -636,12 +652,12 @@
         <div class="container">
             <h2 class="title">ОТЗЫВЫ НАШИХ КЛИЕНТОВ</h2>
             <div class="slider-reviews__content">
-                <div class="slider-reviews__img"><img src="img/reviews/1.PNG" alt="reviews"></div>
-                <div class="slider-reviews__img"><img src="img/reviews/2.PNG" alt="reviews"></div>
-                <div class="slider-reviews__img"><img src="img/reviews/3.PNG" alt="reviews"></div>
-                <div class="slider-reviews__img"><img src="img/reviews/4.PNG" alt="reviews"></div>
-                <div class="slider-reviews__img"><img src="img/reviews/5.PNG" alt="reviews"></div>
-                <div class="slider-reviews__img"><img src="img/reviews/6.PNG" alt="reviews"></div>
+                <div class="slider-reviews__img"><img src="img/reviews/1.jpg" alt="reviews"></div>
+                <div class="slider-reviews__img"><img src="img/reviews/2.jpg" alt="reviews"></div>
+                <div class="slider-reviews__img"><img src="img/reviews/3.jpg" alt="reviews"></div>
+                <div class="slider-reviews__img"><img src="img/reviews/4.jpg" alt="reviews"></div>
+                <div class="slider-reviews__img"><img src="img/reviews/5.jpg" alt="reviews"></div>
+                <div class="slider-reviews__img"><img src="img/reviews/6.jpg" alt="reviews"></div>
               </div>
         </div>
     </section>
@@ -660,6 +676,19 @@
                 </a>
                 <a href="https://ok.ru/profile/293945492795" class="footer__odnoklassniki">
                     <img src="icons/odnoklassniki-brands.svg" alt="odnoklassniki">
+                </a>
+            </div>
+            <div class="footer__social">
+                <a target="blank" href="https://www.instagram.com/malysh.krepysh" class="footer__instagramm">
+                    <img src="icons/instagram-brands.svg" alt="instagramm">
+                </a>
+                <a href="https://ok.ru/profile/293945492795" class="footer__odnoklassniki">
+                    <img src="icons/odnoklassniki-brands.svg" alt="odnoklassniki">
+                </a>
+            </div>
+            <div class="footer__social">
+                <a target="blank" href="https://www.instagram.com/malysh.krepysh" class="footer__instagramm">
+                    <img src="icons/instagram-brands.svg" alt="instagramm">
                 </a>
             </div>
         </div>
